Fix no wrap in label

--- a/mobile/src/pages/accueil/accueil.scss
+++ b/mobile/src/pages/accueil/accueil.scss
@@ -26,4 +26,10 @@ page-accueil {
         position: absolute;
         top: 13%;
     }
+
+    .item ion-label:nth-child(2) {
+        white-space: normal;
+        overflow: visible;
+        margin-top: 5px;
+    }
 }
